Change 'Wiki' name

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -718,7 +718,7 @@ ru:
   label_view_revisions: Просмотреть редакции
   label_watched_issues: Отслеживаемые задачи
   label_week: Неделя
-  label_wiki: Wiki
+  label_wiki: Справка
   label_wiki_edit: Редактирование Wiki
   label_wiki_edit_plural: Wiki
   label_wiki_page: Страница Wiki
