--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -246,7 +246,7 @@ ru:
   button_rollback: Вернуться к данной версии
   button_save: Сохранить
   button_sort: Сортировать
-  button_submit: Принять
+  button_submit: Сохранить
   button_test: Проверить
   button_unarchive: Разархивировать
   button_uncheck_all: Очистить
